Router bug fixes